feat: collect and identify arriving video files
